--- a/capitulo5/instalador.tex
+++ b/capitulo5/instalador.tex
@@ -1,4 +1,4 @@
-\section{Descripción del protoipo}
+\section{Descripción del prototipo}
 En este punto del trabajo terminal, este prototipo se encuentra en una fase aún experimental, sin embargo logra el 
 cometido de simplificar el proceso de puesta en marcha.\\
 
