--- a/Base.tex
+++ b/Base.tex
@@ -86,7 +86,7 @@
 	%%===================================================================
 	\chapter{Capitulo 1}\label{cap:Cap1}
 	\cfinput{capitulo1/introduccion} %si
-	%\cfinput{capitulo1/planteamientoproblema} %no
+%	\cfinput{capitulo1/planteamientoproblema} %no
 	\cfinput{capitulo1/estadoarte} %si
 	%\cfinput{capitulo1/propuestasolucion}
 	\cfinput{capitulo1/justificacion} %si
@@ -113,5 +113,5 @@
 	\cfinput{capitulo5/instalador}
 	
 	\chapter{Anexos}
-	
+	\cfinput{capitulo6/a}\label{anexoa}
 \end{document}
