--- a/capitulo1/limitantes.tex
+++ b/capitulo1/limitantes.tex
@@ -6,7 +6,13 @@ primeramente las limitaciones que se han detectado hasta ahora en cuanto a equip
 	\item Es necesario que los equipo que se utilicen cuenten con el triple del espacio de almacenamiento del archivo completo cada uno en disco duro, para que además de permitir el almacenamiento de los datos, también sea posible tener espacio para trabajar con ellos.
 	\item Equipos con 1GB de RAM o menos no tienen un funcionamiento apropiado con Apache Hadoop y su rendimiento es inconsistente por lo que, no se recomienda trabajar en equipos de con estas características.  
 \end{itemize}
-por otro lado los alcances del proyecto son limitados por lo que se describirá un poco acerca de ello
+Por otro lado los alcances del proyecto son limitados por lo que se describirá un poco acerca de ello
 \begin{itemize}
-	\item Solo se desarr
+	\item Solo se tendrán 3 algoritmos de minería de datos para ejecutar dentro del Framework, para un estudio mas especializado seria conveniente incluir mas algoritmos.
+	\item Las pruebas y desarrollo sobre este trabajo terminal en equipos de computo tradicionales serán ejecutadas unicamente con 3 nodos de datos/replica, por lo que, para un mejor desempeño sería conveniente agregar mas nodos de datos/replica al cluster.
+	\item El archivo de datos proveniente del caso de estudio es de 21 GB, una empresa podría manejar archivos de mayor longitud, por lo que las pruebas realizadas podrían no ser significativos para la cantidad de datos que puedan manejar determinadas empresas. 
+	\item Las tablas de datos que se suban a el repositorio , tendrán que subirse por separado y el manejo de los datos que se podrá ejecutar descargara las relaciones que existan entre las tablas y procesará cada tabla por separado.
+	\item Es posible que no se puedan realizar pruebas o bien suficientes pruebas en otro tipo de equipos de computo para realizar una comparativa del comportamiento que tiene Hadoop, bajo diferentes características computacionales.
+	\item El instalador de Luminus tiene muchos casos de errores o casos especiales que no se considerarán y se dejarán a solución del usuario, cuando estos ocurran, ya que por cuestiones de tiempo es imposible englobarlos todos.
+	 
 \end{itemize}
