--- a/Base.tex
+++ b/Base.tex
@@ -86,9 +86,9 @@
 	%%===================================================================
 	\chapter{Capitulo 1}\label{cap:Cap1}
 	\cfinput{capitulo1/introduccion} %si
-	%\cfinput{capitulo1/planteamientoproblema} %no
+	\cfinput{capitulo1/planteamientoproblema} %no
+	\cfinput{capitulo1/propuestasolucion}
 	\cfinput{capitulo1/estadoarte} %si
-	%\cfinput{capitulo1/propuestasolucion}
 	\cfinput{capitulo1/justificacion} %si
 	\cfinput{capitulo1/objetivos} %si
 	\cfinput{capitulo1/arquitectura} %si
