--- a/capitulo1/estadoarte.tex
+++ b/capitulo1/estadoarte.tex
@@ -1,4 +1,5 @@
 \hypertarget{seccion:IniciarSesion}{\vspace{1pt}}
+\newpage
 \section{Estado del arte}
 Actualmente en el mercado existen diferentes alternativas para los usuarios que busquen hacer uso de Big Data. Las alternativas encontradas, podrían dividirse en 2 tipos:\\
 \begin{itemize}
