--- a/capitulo1/introduccion.tex
+++ b/capitulo1/introduccion.tex
@@ -1,35 +1,2 @@
-\hypertarget{seccion:IniciarSesion}{\vspace{1pt}}
 \section{Introduccion}
-En la actualidad, el valor de los datos es muy importante para las empresas; cuando se hace un análisis correcto de la información
-histórica almacenada, se pueden hacer estadísticas de comportamiento e inclusive predicciones de eventos que vendrán en el futuro, las cuales ayudan a la toma
-de decisiones. Conforme los datos crecen en el tiempo, también la complejidad en el procesamiento de estos datos aumenta.
-Una de las tendencias de años recientes, llamada Big Data, utiliza un esquema de cómputo distribuido para aprovechar la
-infraestructura de cómputo disponible en la empresa, y resuelve de manera cooperativa los problemas de análisis de datos.
-\\
-Como son:
-\begin{itemize}
-\item Datos de gran volumen 
-\item Los datos cambian rápidamente por lo que su tiempo de validez es muy corto
-\item En ocasiones es difícil encontrar patrones para agrupar datos provenientes de diversas fuentes 
-\item Es necesario discernir entre qué datos son importantes en el análisis y cuáles no lo son 
-\item Es necesario integrar diferentes tipos de datos (estructurados, no estructurados, semiestructurados) 
-\item No existen estándares de calidad de datos unificados
-Además de otros factores 
-\end{itemize}
-La propuesta de solución va encaminada a desarrollar un ambiente de Big Data, que incluya los procesos de verificación de datos,
-selección y aplicación de los algoritmos de minería de datos (clasificación y reglas de asociación) necesarios, y generación de los
-resultados del análisis, con el fin de que sea atractivo de implementar de manera real en las empresas y puedan hacer analítica de
-los datos empresarias.
-\\
-Se busca que los clientes potenciales sean pequeñas y medianas empresas, ya que estas se encuentran generando grandes
-cantidades de datos todo el tiempo. Un conjunto de estos datos están relacionados a los ingresos y egresos que posee la empresa.
-Información de la que se hará uso para generar conocimiento nuevo haciendo uso del ambiente de Big Data mencionado
-anteriormente.
-\\
-Por otro lado, se requiere definir dos conceptos clave para este trabajo terminal, y como es que serán entendidos dentro del mismo:
-\\
-\textbf{Big Data}: Se refiere a conjuntos de datos cuyo tamaño está más allá de las capacidades de las herramientas típicas de software de
-bases de datos para capturar, gestionar y analizar.
-\\
-\textbf{Data Mining}: Proceso de descubrimiento de nuevas y significativas relaciones, patrones y tendencias al examinar grandes
-cantidades de datos
+En el siglo XXI, el big data ha sido un tema que ha dado mucho de qué hablar, su estudio ha ido en constante crecimiento así como ha servido de gran manera a empresas dedicadas a las tecnologías de la información a generar conocimiento a partir de cantidades masivas de datos que no tienen una estructura muy bien definida. Como el propio término "Big Data" (Grandes Datos en español) lo hace entender, los la cantidad de datos que se maneja es demasiado grande para ser siquiera almacenada o procesada de manera tradicional. Big Data provee a quien lo usa conocimiento que de otra forma le habría sido imposible obtener, por lo que puede llegar a ser una herramienta de alto valor entre las empresas.
