--- a/capitulo1/propuestasolucion.tex
+++ b/capitulo1/propuestasolucion.tex
@@ -1,2 +1,2 @@
-
-\section{Propuesta de Solución}
+\section{Propuesta de solución}
+En este trabajo terminal se propone desarrollar un ambiente de Big Data que incluya procesos de verificación de datos, selección, aplicación de algoritmos de minería de datos (clasificación y reglas de asociación) y machine learning necesarios, así como la generación de conocimiento y resultados a partir de la aplicación de esos algoritmos. Esta solución podrá implementarse en computadoras tradicionales, bajando así el costo económico de su implementación en gran medida, ya que se estaría eliminando la necesidad de comprar equipos especializados y ambientarlos.
