--- a/capitulo1/planteamientoproblema.tex
+++ b/capitulo1/planteamientoproblema.tex
@@ -1,44 +1,12 @@
-\hypertarget{seccion:IniciarSesion}{\vspace{1pt}}
-\section{Introduccion}
-%\subsection{Administrar pagos admisión}
+\section{Planteamiento del problema}
+En la actualidad, el valor de los datos es muy importante para las empresas; cuando se hace un análisis correcto de la información histórica almacenada, se pueden hacer estadísticas de comportamiento e inclusive predicciones de eventos que vendrán en el futuro, las cuales ayudan a la toma de decisiones. Conforme los datos crecen en el tiempo, también la complejidad en el procesamiento de estos datos aumenta. Una de las tendencias de años recientes, llamada Big Data, utiliza un esquema de cómputo distribuido para aprovechar la infraestructura de cómputo disponible en la empresa, y resuelve de manera cooperativa los problemas de análisis de datos. Como son:\\
+\begin{itemize}
+\item Datos de gran volumen.\\
+\item Los datos cambian rápidamente por lo que su tiempo de validez es muy corto.\\
+\item En ocasiones es difícil encontrar patrones para agrupar datos provenientes de diversas fuentes.\\
+\item Es necesario discernir entre qué datos son importantes en el análisis y cuáles no lo son.\\
+\item Es necesario integrar diferentes tipos de datos (estructurados, no estructurados, semiestructurados).\\
+\item No existen estándares de calidad de datos unificados.\\
+\end{itemize}
+El problema con el uso de Big Data es que implica una gran inversión de recursos económicos, recursos humanos y tiempo. Las curvas de aprendizaje de las tecnologías con que se hace uso de Big Data suelen ser algo pronunciadas, por lo que generalmente conlleva un tiempo algo amplio a quienes quieren aprender a usarlas. Además de que se requiere de una base de conocimiento en cuestión de bases de datos, sistemas operativos, programación, entre otras áreas. En el ámbito económico, implementar un ambiente de Big Data suele tener un costo económico muy elevado, ya que normalmente se utilizan servidores dedicados. Tanto costo de los equipos mismos, como de su mantenimiento y el acondicionamiento del lugar donde se pondrán a funcionar, es bastante alto.\\
 
-
-
-Para que la ELD pueda mantener actualizado el status de pago de los aspirantes que realizaron la operación en sucursal bancaria, es necesario que el \textbf{Contador General} actualice de forma manual dichos pagos, esto se logra con ayuda del archivo brindado por BANAMEX, el cual servirá para ser cargado en el sistema y este lo interprete y determine si es correcto, en caso de ser correcto actualizar el estado de pago de los aspirantes que allí se encuentran, de lo contrario mostrar las inconsistencias.\\
-Una de las operaciones que brinda el sistema, es la actualización manual del status de pago de un aspirante, esta acción le permite tener el control para la actualización del status de pago de los aspirantes, esto con la finalidad de no depender del archivo de BANAMEX en caso de que presentaran conflictos con el mismo.
-%\subsubsection{Procedimiento}
-\begin{enumerate}
-	\item Solicite administrar los pagos admisión seleccionando la opción \textbf{Administración de pagos} del menú \refIU{fig:menuPrincipalCG}{Menú del Contador General} y posteriormente la opción \textbf{Pagos Admisión} del menú \refIU{fig:menuPagosA}{Menú Pagos Admisión}.
-	\item Se mostrará la pantalla \refIU{fig:APA}{Administrar Pagos Admisión}.
-	\begin{figure}[!htbp]
-		\hypertarget{fig:APA}{\hspace{1pt}}
-		\begin{center}
-			\includegraphics[height=0.3\textheight]{capitulo1/images/IU-APA.png}
-			\caption{Administrar Pagos Admisión}
-			\label{fig:APA}
-		\end{center}
-	\end{figure}
-	
-\end{enumerate}
-	
-
-
-\newpage
-\begin{Errores}
-	\error{El sistema muestra un mensaje indicando que falta información para realizar la operación.}
-	{
-		\begin{UClist}
-			\UCli	Verifique que exista una convocatoria \textbf{Publicada}.
-			\UCli	Verifique que exista un periodo de pagos.
-			\UCli	Verifique que exista un periodo de pre-registro CENEVAL vigente.
-		\end{UClist}
-	}
-	\error{El sistema muestra un mensaje indicando que no se ha realizado la asociación de fechas de CENEVAL y Psicométrico.}
-	{
-		\begin{UClist}
-			\UCli	Verifique que la Coordinación de Control Escolar haya asociado las fechas CENEVAL y Psicométrico.
-		\end{UClist}
-	}
-	
-
-\end{Errores}
