--- a/capitulo1/limitantes.tex
+++ b/capitulo1/limitantes.tex
@@ -1,6 +1,7 @@
 \section{Alcances y Limitaciones}
-A continuación se definirán los alcances y limitaciones que tiene este trabajo terminal 
-primeramente las limitaciones que se han detectado hasta ahora en cuanto a equipo de computo para poder ejecutar el ambiente:
+A continuación se definirán los alcances y limitaciones que tiene este trabajo terminal.
+\\ 
+Primeramente las limitaciones que se han detectado hasta ahora en cuanto a equipo de computo para poder ejecutar el ambiente:
 \begin{itemize}
 	\item Se necesitan al menos 2 computadoras para poder tener un cluster distribuido, por lo que, a pesar de que las tecnologías pueden ejecutar en un solo nodo de trabajo, se perderían las ventajas que ofrece el computo distribuido.
 	\item Es necesario que los equipo que se utilicen cuenten con el triple del espacio de almacenamiento del archivo completo cada uno en disco duro, para que además de permitir el almacenamiento de los datos, también sea posible tener espacio para trabajar con ellos.
