--- a/capitulo1/justificacion.tex
+++ b/capitulo1/justificacion.tex
@@ -1,5 +1,5 @@
 \section{Justificación}
-
+%refi 6 es la 4
 El principal motivo de desarrollo de la presente propuesta es el de facilitar a las empresas u organizaciones la implementación de
 un ambiente de Big Data, dado que se tiene la creencia de que es un proceso complicado, tardado y muy costoso. Cada uno de los
 factores mencionados anteriormente puede ser justificado de la siguiente manera: la complejidad de la implementación de Big Data
@@ -9,10 +9,10 @@ procesamiento de datos; y finalmente los costos estarán de acuerdo a las comput
 como nodos de procesamiento y almacenamiento de datos que serán procesados.
 \\
 Esta herramienta estaría dedicada a empresas u organizaciones que busquen implementar un ambiente de Big Data de una manera
-más rápida, sencilla, eficiente y a un menor costo. Para que con su adecuado uso, cualquiera de estas entidades sea capaz de
+más rápida, sencilla, eficiente y a un menor costo \cite{refi8}. Para que con su adecuado uso, cualquiera de estas entidades sea capaz de
 mejorar, ser más competitiva, y tener un mayor control sobre su propia información, ya que el conocimiento adquirido a partir de
 la aplicación de técnicas de minería de datos sobre grandes volúmenes de información estaría siendo de vital importancia para que
-dichas organizaciones planeen y ejecuten estrategias que les permitan alcanzar sus objetivos.
+dichas organizaciones planeen y ejecuten estrategias que les permitan alcanzar sus objetivos \cite{refi7}.
 \\
 Se ha hecho especial hincapié en el sector empresarial en esta sección, ya que, en general, podría decirse que pequeñas y medianas
 empresas son los principales clientes potenciales. Esto debido a que la mayoría cuenta con cierta infraestructura de datos y con
@@ -21,13 +21,13 @@ por la herramienta para la generación de conocimiento.
 \\
 Si bien, existen algunas implementaciones comerciales (las cuales ya se han mencionado en los apartados previos) que realizan la
 automatización de la implementación de Big Data, son realmente costosas en recursos de cómputo, y el licenciamiento tiene un
-costo elevado con relación a los usuarios y/o equipos a usar. Algunas implementaciones están basadas en máquinas virtuales,
-que, si bien, automatizan todo el trabajo, de igual forma resultan costosas con relación al equipo necesario y dinero invertido.
+costo elevado con relación a los usuarios y/o equipos a usar \cite{refi9}. Algunas implementaciones están basadas en máquinas virtuales,
+que, si bien, automatizan todo el trabajo, de igual forma resultan costosas con relación al equipo necesario y dinero invertido \cite{refi6}.
 Además, el costo de las herramientas comerciales más robustas puede llegar a los cientos de miles de pesos.
 \\
 Para la realización de esta propuesta se requerirá dominio en el manejo de bases de datos relacionales y no relacionales;
 conocimiento de técnicas de minería de datos y su adecuada aplicación; manejo de herramientas y Frameworks dedicados al
-desarrollo de aplicaciones que se ejecuten de manera distribuida; conocimiento en el ámbito de complejidades algorítmicas
+desarrollo de aplicaciones que se ejecuten de manera distribuida \cite{refi10}; conocimiento en el ámbito de complejidades algorítmicas
 para así poder justificar la mejora en la eficiencia de esta herramienta con respecto a las otras ya existentes; manejo de distintos
 lenguajes de programación, debido a que el lenguaje que se utilizara para el desarrollo de la aplicación principal será distinto al
 lenguaje que se utilizara para la implementación de los algoritmos de minería de datos.
