--- a/capitulo1/planteamientoproblema.tex
+++ b/capitulo1/planteamientoproblema.tex
@@ -1,12 +1,13 @@
 \section{Planteamiento del problema}
-En la actualidad, el valor de los datos es muy importante para las empresas; cuando se hace un análisis correcto de la información histórica almacenada, se pueden hacer estadísticas de comportamiento e inclusive predicciones de eventos que vendrán en el futuro, las cuales ayudan a la toma de decisiones. Conforme los datos crecen en el tiempo, también la complejidad en el procesamiento de estos datos aumenta. Una de las tendencias de años recientes, llamada Big Data, utiliza un esquema de cómputo distribuido para aprovechar la infraestructura de cómputo disponible en la empresa, y resuelve de manera cooperativa los problemas de análisis de datos. Como son:\\
+En la actualidad, el valor de los datos es muy importante para las empresas; cuando se hace un análisis correcto de la información histórica almacenada, se pueden hacer estadísticas de comportamiento e inclusive predicciones de eventos que vendrán en el futuro, las cuales ayudan a la toma de decisiones \cite{Baz}. Conforme los datos crecen en el tiempo, también la complejidad en el procesamiento de estos datos aumenta. Una de las tendencias de años recientes, llamada Big Data, utiliza un esquema de cómputo distribuido para aprovechar la infraestructura de cómputo disponible en la empresa, y resuelve de manera cooperativa los problemas de análisis de datos \cite{refi}. Aunque esta forma de trabajo parece simple, la implementación y puesta en marcha se complica por diversos factores.
+Como son:\\
 \begin{itemize}
-\item Datos de gran volumen.\\
-\item Los datos cambian rápidamente por lo que su tiempo de validez es muy corto.\\
-\item En ocasiones es difícil encontrar patrones para agrupar datos provenientes de diversas fuentes.\\
-\item Es necesario discernir entre qué datos son importantes en el análisis y cuáles no lo son.\\
-\item Es necesario integrar diferentes tipos de datos (estructurados, no estructurados, semiestructurados).\\
-\item No existen estándares de calidad de datos unificados.\\
+\item Datos de gran volumen.\cite{refi2}\\
+\item Los datos cambian rápidamente por lo que su tiempo de validez es muy corto.\cite{refi2}\\
+\item En ocasiones es difícil encontrar patrones para agrupar datos provenientes de diversas fuentes.\cite{refi2}\\
+\item Es necesario discernir entre qué datos son importantes en el análisis y cuáles no lo son.\cite{refi2}\\
+\item Es necesario integrar diferentes tipos de datos (estructurados, no estructurados, semiestructurados).\cite{refi2}\\
+\item No existen estándares de calidad de datos unificados.\cite{refi2}\\
 \end{itemize}
 El problema con el uso de Big Data es que implica una gran inversión de recursos económicos, recursos humanos y tiempo. Las curvas de aprendizaje de las tecnologías con que se hace uso de Big Data suelen ser algo pronunciadas, por lo que generalmente conlleva un tiempo algo amplio a quienes quieren aprender a usarlas. Además de que se requiere de una base de conocimiento en cuestión de bases de datos, sistemas operativos, programación, entre otras áreas. En el ámbito económico, implementar un ambiente de Big Data suele tener un costo económico muy elevado, ya que normalmente se utilizan servidores dedicados. Tanto costo de los equipos mismos, como de su mantenimiento y el acondicionamiento del lugar donde se pondrán a funcionar, es bastante alto.\\
 
