--- a/Base.tex
+++ b/Base.tex
@@ -1,4 +1,25 @@
 \documentclass[10pt]{book}
+
+
+\usepackage[spanish, es-tabla]{babel}
+\usepackage[utf8]{inputenc}
+\usepackage[T1]{fontenc} 
+
+
+\usepackage{graphicx}
+\usepackage{graphics}
+\usepackage{float}
+\usepackage{pict2e}
+\usepackage{epic}
+\usepackage{eepic}
+%\usepackage{pstricks}
+%\usepackage{tikz}
+\usepackage[absolute]{textpos} 
+
+\DeclareGraphicsExtensions{.png,.pdf,.jpg,.gif}
+
+
+
 \usepackage{tabulary}
 \usepackage{cdt/cdtAnalisis}
 \usepackage{cdt/cdtAnalisis}
@@ -40,10 +61,13 @@
 	%=========================================================
 	% Portada
 	%\ThisLRCornerWallPaper{1}{cdt/theme/agua.png}
+	\frontmatter
+	\mainmatter
 	\thispagestyle{empty}
-	\maketitle
-	
-	
+	%\maketitle
+	%\chapter{Capitulo x}\label{cap:Cap1}
+			\cfinput{portada}
+
 	%=========================================================
 	% Hoja de revisión
 	%\makeDocInfo
@@ -55,45 +79,27 @@
 	
 	%=========================================================
 	% Indices del documento
-	\frontmatter
+
 	%\newpage
 	%
 	%\LRCornerWallPaper{1}{cdt/theme/pleca.png}
 	
 	
-	% \hideControlVersion
-	
+	%\hideControlVersion
+
 	\tableofcontents
 	
-	\mainmatter
-	
-	%----------------------------------------------------------
-	%\chapter{Introducción}\label{cap:Introduccion}
-	%\cfinput{introduccion}
-	%
-	%%----------------------------------------------------------
-	%\chapter{Descripión del proceso}\label{cap:Introduccion}
-	%\cfinput{proceso}
-	%
-	%%----------------------------------------------------------
-	%\chapter{Glosario de Términos}\label{cap:Glosario}
-	%\cfinput{glosario}
-	%
-	%
-	%%---------------------------------------------------------
-	%%----------------------------------------------------------
-	%\chapter{Admisión}\label{cap:Admision}
-	%%===================================================================
+
 	\chapter{Capitulo 1}\label{cap:Cap1}
-	\cfinput{capitulo1/introduccion} %si
-	\cfinput{capitulo1/planteamientoproblema} %no
+	\cfinput{capitulo1/introduccion} 
+	\cfinput{capitulo1/planteamientoproblema} 
 	\cfinput{capitulo1/propuestasolucion}
-	\cfinput{capitulo1/estadoarte} %si
-	\cfinput{capitulo1/justificacion} %si
-	\cfinput{capitulo1/objetivos} %si
-	\cfinput{capitulo1/arquitectura} %si
-	\cfinput{capitulo1/limitantes} %si
-	\cfinput{capitulo1/trabajoafuturo} %si 
+	\cfinput{capitulo1/estadoarte} 
+	\cfinput{capitulo1/justificacion} 
+	\cfinput{capitulo1/objetivos} 
+	\cfinput{capitulo1/arquitectura} %yo los escribi revisalos pls
+	\cfinput{capitulo1/limitantes} %yo los escribi revisalos pls
+	\cfinput{capitulo1/trabajoafuturo} %yo los escribi revisalos pls  
 	%
 	\chapter{Marco teórico}\label{cap:Cap2}
 	\cfinput{capitulo2/marcoteorico}
@@ -114,5 +120,6 @@
 	
 	\chapter{Anexos}
 	\cfinput{capitulo6/a}\label{anexoa}
-	
+	\cfinput{capitulo6/b}\label{anexob}
+	\cfinput{capitulo7/referencias}\label{referencias}
 \end{document}
