--- a/capitulo1/arquitectura.tex
+++ b/capitulo1/arquitectura.tex
@@ -1,11 +1,5 @@
 \section{Arquitectura de la red distribuida}
-%\subsection{Administrar pagos admisión}
-%\subsection{Administrar pagos admisión}
-Desarrollo de un software que permita la implementación de un ambiente de Big Data de manera distribuida para realizar análisis
-de datos aplicando diversas técnicas de minería de datos como son: aprendizaje de máquina (machine learning), como reglas de
-asociación y árboles de decisión mismos que favorecen de una u otra manera a la toma de decisiones de forma práctica y sin
-demasiadas complicaciones, a las empresas. El siguiente diagrama muestra la arquitectura prevista del sistema:
-\\
+El siguiente diagrama muestra la arquitectura prevista del sistema:
 \begin{figure}[!htbp]
 	\hypertarget{fig:cap1}{\hspace{1pt}}
 	\begin{center}
@@ -14,17 +8,20 @@ demasiadas complicaciones, a las empresas. El siguiente diagrama muestra la arqu
 		\label{fig:cap1}
 	\end{center}
 \end{figure}
-Con esta arquitectura será posible adaptar el Framework a diversos casos de estudio relacionados a datos de ingresos y egresos
-económicos para diferentes empresas , modificando únicamente archivos que serán destinados para la configuración de dichos
-casos de estudio. Esto sin tener que modificar la arquitectura del sistema ni entender su funcionamiento interno. Será posible
+\\ 
+Con esta arquitectura será posible adaptar el Framework a diversos casos de estudio de las empresas, modificando únicamente archivos que serán destinados para la configuración de dichos
+casos de estudio. 
+\\
+Esto sin tener que modificar la arquitectura del sistema ni entender su funcionamiento interno. Será posible
 mantener muy bien separados los bloques de código que realizan cada actividad en el sistema para que en caso de algún fallo sea
 más fácil detectar en dónde está ocurriendo.
 \\
-Productos esperados:
-\\
-\begin{enumerate}
-	\item Framework funcional para el manejo de Big Data en grandes cantidades de datos. (Implementación, Código Fuente)
-	\item Caso de prueba funcional implementado en el Framework
-	\item Manual Técnico
-	\item Manual de Usuario.
-\end{enumerate}
+A continuación se explicarán cada uno de los bloques que conforman la arquitectura del sistema.
+\begin{itemize}
+	\item \textbf{Salida de información}: Es el bloque que se encarga de presentar el resultado final al usuario experto, luego de aplicar los algoritmos de Big Data sobre ellos.
+	\item \textbf{Aplicación de los algoritmos}: Es el modulo que permite aplicar los algoritmos de minería de datos sobre los nodos de datos/replica a los datos. ademas de aplicar la función reduce con los resultados en el nodo maestro.
+	\item \textbf{Fuente de información}: Es el modulo que recibe como dato de entrada el algoritmo de minería de datos a ejecutar del usuario conocida como operación fuente
+	\item \textbf{Analizador de operaciones}: Es el modulo encargado de revisar el caso de estudio en cuestión del usuario final para visualizar si es que se tienen que realizar ajustes en el \textbf{Archivo de configuración del recolector del sistema} además de revisar que todo se encuentre funcionando de manera adecuada y que sea posible ejecutar el algoritmo de minería de datos en este momento.
+	\item \textbf{Administrador de tareas}: es el encargado de administrar las tareas que llevará a cabo cada nodo así como también de recibir los resultados de las tareas que estos ejecuten de manera local de vuelta al servidor
+	\item \textbf{Archivo de configuración del recolector del administrador de tareas }: Este archivo servirá para llevar a cabo el ajuste de los algoritmos de minería de datos a cada caso de estudio que quiera aplicar el usuario experto. sera necesario realizar algunos ajustes en el mismo para que los algoritmos puedan ser ejecutados de manera satisfactoria.
+\end{itemize}
